tests/snapshots/yaml_suite_snapshots__yaml_suite_PUW8_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Document start on last line
  from: "@perlpunk"
  tags: header
  yaml: "---\na: b\n---\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :a\n   =VAL :b\n  -MAP\n -DOC\n +DOC ---\n  =VAL :\n -DOC\n-STR\n"
  json: "{\n  \"a\": \"b\"\n}\nnull\n"
  dump: "---\na: b\n---\n...\n"
