tests/snapshots/yaml_suite_snapshots__yaml_suite_PW8X_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "- &a\n- a\n- &a : a\n  b: &b\n- &c : &a\n- &d :\n- &e : &a\n"
  from: NimYAML tests
  name: Anchors on Empty Scalars
  tags: anchor explicit-key
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL &a :\n   =VAL :a\n   +MAP\n    =VAL &a :\n    =VAL :a\n    =VAL :b\n    =VAL &b :\n   -MAP\n   +MAP\n    =VAL &c :\n    =VAL &a :\n   -MAP\n   +MAP\n    =VAL &d :\n    =VAL :\n   -MAP\n   +MAP\n    =VAL &e :\n    =VAL &a :\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  yaml: "- &a\n- a\n-\n  &a : a\n  b: &b\n-\n  &c : &a\n-\n  ? &d\n-\n  ? &e\n  : &a\n"
