tests/snapshots/yaml_suite_snapshots__yaml_suite_Q4CL_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Trailing content after quoted value
  from: "@perlpunk"
  tags: error mapping double
  fail: true
  yaml: "key1: \"quoted1\"\nkey2: \"quoted2\" trailing content\nkey3: \"quoted3\"\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key1\n   =VAL \"quoted1\n   =VAL :key2\n   =VAL \"quoted2\n"
