tests/snapshots/yaml_suite_snapshots__yaml_suite_Q5MG_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Tab at beginning of line followed by a flow mapping
  from: IRC
  tags: flow whitespace
  yaml: "———»{}\n"
  tree: "+STR\n +DOC\n  +MAP {}\n  -MAP\n -DOC\n-STR\n"
  json: "{}\n"
  dump: "{}\n"
