tests/snapshots/yaml_suite_snapshots__yaml_suite_Q5MG_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "{}\n"
  from: IRC
  json: "{}\n"
  name: Tab at beginning of line followed by a flow mapping
  tags: flow whitespace
  tree: "+STR\n +DOC\n  +MAP {}\n  -MAP\n -DOC\n-STR\n"
  yaml: "———»{}\n"
